--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,7 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    
+      
   </properties>
   
 <dependencies>	 
@@ -42,6 +39,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
+        <configuration>
+          <release>17</release>
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
